
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(EchoServer)

SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -O0")

ADD_SUBDIRECTORY(./src)

ADD_EXECUTABLE(${PROJECT_NAME} ./example/EchoServer.cpp)

ADD_EXECUTABLE(EchoClient ./example/EchoClient.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} Net.a)

TARGET_LINK_LIBRARIES(EchoClient pthread)




