
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -O0")

INCLUDE_DIRECTORIES(./)

AUX_SOURCE_DIRECTORY(./ srcCPP)

ADD_SUBDIRECTORY(./Log)

ADD_SUBDIRECTORY(./Timer)

ADD_LIBRARY(Net.a STATIC ${srcCPP})

TARGET_LINK_LIBRARIES(Net.a Log.a)
TARGET_LINK_LIBRARIES(Net.a Timer.a)
TARGET_LINK_LIBRARIES(Net.a pthread)

